[project]
name = "qmill-quantum-provenance"
version = "0.1.0"
description = "Unified quantum provenance research prototype — reproducible paper artifact"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.14"
authors = [{ name = "QMill" }]
keywords = ["quantum", "provenance", "reproducibility", "openapi"]

dependencies = [
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qmill_quantum_provenance"]

# The OpenAPI contract is the source of truth for record validation and ships as
# package data so validate_record() works from an installed wheel.
artifacts = ["src/qmill_quantum_provenance/openapi.json"]

[tool.hatch.build.targets.sdist]
include = [
    "src/qmill_quantum_provenance",
    "tests",
    "artifact",
    "supplementary",
    "README.md",
    "LICENSE",
    "CITATION.cff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
